force-app/main/default/objects/Contract__c/fields/Business_Industry__c.field-meta.xml
<CustomField>
    <fullName>Business_Industry__c</fullName>
    <formula>TEXT(Account__r.Business_Industry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Industry</label>
    <type>Text</type>
</CustomField>