force-app/main/default/objects/Contract__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <formula>TEXT(Account__r.Business_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Type</label>
    <type>Text</type>
</CustomField>