force-app/main/default/objects/Contract__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name (not used)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts. (Company Name)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>