force-app/main/default/objects/Contract__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <formula>TEXT(Account__r.NumberOfEmployees)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Size</label>
    <type>Text</type>
</CustomField>