force-app/main/default/objects/Contract__c/fields/Compare_day__c.field-meta.xml
<CustomField>
    <fullName>Compare_day__c</fullName>
    <label>Comparison Date</label>
    <type>Date</type>
</CustomField>