force-app/main/default/objects/Contract__c/fields/Comparision_date__c.field-meta.xml
<CustomField>
    <fullName>Comparision_date__c</fullName>
    <label>Comparision date</label>
    <type>Date</type>
</CustomField>