force-app/main/default/objects/Contract__c/fields/Contact_persons__c.field-meta.xml
<CustomField>
    <fullName>Contact_persons__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact persons</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts. (Contact persons)</relationshipLabel>
    <relationshipName>Contracts4</relationshipName>
    <type>Lookup</type>
</CustomField>