force-app/main/default/objects/Contract__c/fields/Contract_Code__c.field-meta.xml
<CustomField>
    <fullName>Contract_Code__c</fullName>
    <label>Contract Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>