force-app/main/default/objects/Contract__c/fields/CountdownDays__c.field-meta.xml
<CustomField>
    <fullName>CountdownDays__c</fullName>
    <formula>IF( Contract_End_Date__c &gt;  TODAY(), Contract_End_Date__c -  TODAY(), 0  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Countdown Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>