force-app/main/default/objects/Contract__c/fields/Credit_Currency__c.field-meta.xml
<CustomField>
    <fullName>Credit_Currency__c</fullName>
    <label>Credit Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>