force-app/main/default/objects/Contract__c/fields/Credit_limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_limit__c</fullName>
    <label>Credit limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>