force-app/main/default/objects/Contract__c/fields/Credit_period__c.field-meta.xml
<CustomField>
    <fullName>Credit_period__c</fullName>
    <label>Credit period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>