force-app/main/default/objects/Contract__c/fields/Credit_Request__c.field-meta.xml
<CustomField>
    <fullName>Credit_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Request</label>
    <referenceTo>Credit_Request__c</referenceTo>
    <relationshipLabel>Contracts.</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>