force-app/main/default/objects/Contract__c/fields/Credit_Term__c.field-meta.xml
<CustomField>
    <fullName>Credit_Term__c</fullName>
    <label>Credit Term</label>
    <type>Date</type>
</CustomField>