force-app/main/default/objects/Contract__c/fields/Date_of_appendix__c.field-meta.xml
<CustomField>
    <fullName>Date_of_appendix__c</fullName>
    <label>Date of appendix</label>
    <type>Date</type>
</CustomField>