force-app/main/default/objects/Contract__c/fields/Date_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Establishment__c</fullName>
    <formula>Account__r.Date_of_Establishment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Establishment</label>
    <type>Date</type>
</CustomField>