force-app/main/default/objects/Contract__c/fields/Detail_of_changes_in_renew_contract__c.field-meta.xml
<CustomField>
    <fullName>Detail_of_changes_in_renew_contract__c</fullName>
    <label>Detail of changes in renew contract</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>