force-app/main/default/objects/Contract__c/fields/DKBT__c.field-meta.xml
<CustomField>
    <fullName>DKBT__c</fullName>
    <label>Compensation Term</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>