force-app/main/default/objects/Contract__c/fields/Estimate_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Volume__c</fullName>
    <formula>TEXT( Account__r.EstimateVolumeTeusCBM__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate Volume</label>
    <type>Text</type>
</CustomField>