force-app/main/default/objects/Contract__c/fields/NDDPL__c.field-meta.xml
<CustomField>
    <fullName>NDDPL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Representative</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts. (Người đại diện pháp luật)</relationshipLabel>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>