force-app/main/default/objects/Contract__c/fields/PhuLuc__c.field-meta.xml
<CustomField>
    <fullName>PhuLuc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phụ Lục</label>
    <referenceTo>addendum__c</referenceTo>
    <relationshipLabel>Contracts.</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>