force-app/main/default/objects/Contract__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts. (PIC)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>