force-app/main/default/objects/Contract__c/fields/Purpose_of_submitting__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_submitting__c</fullName>
    <label>Purpose of submitting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>