force-app/main/default/objects/Contract__c/fields/Request_to_issue_Tax_invoice1__c.field-meta.xml
<CustomField>
    <fullName>Request_to_issue_Tax_invoice1__c</fullName>
    <label>Request to issue Tax invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TRUE_FALSE</valueSetName>
    </valueSet>
</CustomField>