force-app/main/default/objects/Contract__c/fields/Request_to_issue_Tax_invoice__c.field-meta.xml
<CustomField>
    <fullName>Request_to_issue_Tax_invoice__c</fullName>
    <formula>text(Account__r.RequestToIssueTaxInvoice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request to issue Tax invoice</label>
    <type>Text</type>
</CustomField>