force-app/main/default/objects/Contract__c/fields/Selling_rate_Profit__c.field-meta.xml
<CustomField>
    <fullName>Selling_rate_Profit__c</fullName>
    <label>Selling rate / Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>