force-app/main/default/objects/Contract__c/fields/Serivce_Type__c.field-meta.xml
<CustomField>
    <fullName>Serivce_Type__c</fullName>
    <label>Serivce Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ServiceType</valueSetName>
    </valueSet>
</CustomField>