force-app/main/default/objects/Contract__c/fields/Start_date_of_Credit_Term__c.field-meta.xml
<CustomField>
    <fullName>Start_date_of_Credit_Term__c</fullName>
    <label>Start date of Credit Term</label>
    <type>Date</type>
</CustomField>