force-app/main/default/objects/Contract__c/fields/Summary_of_the_handling_request_if_any__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_the_handling_request_if_any__c</fullName>
    <label>Summary of the handling request (if any</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>