force-app/main/default/objects/Contract__c/fields/Summary_of_the_payment_terms_if_any_sp__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_the_payment_terms_if_any_sp__c</fullName>
    <label>Summary of the payment terms ( if any sp</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>