force-app/main/default/objects/Contract__c/fields/Summary_of_the_quotation_and_tariff__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_the_quotation_and_tariff__c</fullName>
    <label>Summary of the quotation and tariff</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>