force-app/main/default/objects/Contract__c/fields/Summary_other_requirement_If_any__c.field-meta.xml
<CustomField>
    <fullName>Summary_other_requirement_If_any__c</fullName>
    <label>Summary other requirement (If any)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>