force-app/main/default/objects/Contract__c/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <formula>Account__r.TaxCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Code</label>
    <type>Text</type>
</CustomField>