force-app/main/default/objects/Contract__c/fields/TCLsPIC__c.field-meta.xml
<CustomField>
    <fullName>TCLsPIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCL&apos;s PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>