force-app/main/default/objects/Contract__c/recordTypes/Agent.recordType-meta.xml
<RecordType>
    <fullName>Agent</fullName>
    <active>true</active>
    <label>Agent</label>
</RecordType>